Create Product Collection service and some changes to product controller class